--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,17 +1,98 @@
 [build-system]
-requires = ["jupyter_packaging~=0.10,<2", "jupyterlab~=3.1"]
-build-backend = "jupyter_packaging.build_api"
+requires = [
+    "hatchling",
+    "jupyterlab~=3.1",
+]
+build-backend = "hatchling.build"
 
-[tool.jupyter-packaging.options]
-skip-if-exists = ["jupyterlab_pytutor/labextension/static/style.js"]
-ensured-targets = ["jupyterlab_pytutor/labextension/static/style.js", "jupyterlab_pytutor/labextension/package.json"]
+[project]
+name = "jupyterlab-pytutor"
+description = "A JupyterLab extension for pythontutor.com"
+readme = "README.md"
+requires-python = ">=3.6"
+authors = [
+    { name = "Thorsten Beier", email = "derthorstenbeier@gmail.com" },
+]
+keywords = [
+    "Jupyter",
+    "JupyterLab",
+    "JupyterLab3",
+]
+classifiers = [
+    "Framework :: Jupyter",
+    "License :: OSI Approved :: BSD License",
+    "Programming Language :: Python",
+    "Programming Language :: Python :: 3",
+    "Programming Language :: Python :: 3.6",
+    "Programming Language :: Python :: 3.7",
+    "Programming Language :: Python :: 3.8",
+    "Programming Language :: Python :: 3.9",
+]
+dependencies = []
+version = "0.1.0"
 
-[tool.jupyter-packaging.builder]
-factory = "jupyter_packaging.npm_builder"
+[project.license]
+file = "LICENSE"
 
-[tool.jupyter-packaging.build-args]
+[project.urls]
+Homepage = "https://github.com/jupyterlab-contrib/jupyterlab-pytutor"
+
+[tool.hatch.build.targets.wheel.shared-data]
+"jupyterlab_pytutor/labextension/static" = "share/jupyter/labextensions/jupyterlab_pytutor/static"
+"install.json" = "share/jupyter/labextensions/jupyterlab_pytutor/install.json"
+"jupyterlab_pytutor/labextension/package.json" = "share/jupyter/labextensions/jupyterlab_pytutor/package.json"
+"jupyterlab_pytutor/labextension/schemas/jupyterlab_pytutor" = "share/jupyter/labextensions/jupyterlab_pytutor/schemas/jupyterlab_pytutor"
+
+[tool.hatch.build.targets.sdist]
+exclude = [
+    ".github",
+]
+
+[tool.hatch.build.hooks.jupyter-builder]
+dependencies = [
+    "hatch-jupyter-builder>=0.8.2",
+]
+build-function = "hatch_jupyter_builder.npm_builder"
+ensured-targets = [
+    "jupyterlab_pytutor/labextension/static/style.js",
+    "jupyterlab_pytutor/labextension/package.json",
+]
+skip-if-exists = [
+    "jupyterlab_pytutor/labextension/static/style.js",
+]
+
+[tool.hatch.build.hooks.jupyter-builder.editable-build-kwargs]
+build_dir = "jupyterlab_pytutor/labextension"
+source_dir = "src"
+build_cmd = "install:extension"
+npm = [
+    "jlpm",
+]
+
+[tool.hatch.build.hooks.jupyter-builder.build-kwargs]
 build_cmd = "build:prod"
-npm = ["jlpm"]
+npm = [
+    "jlpm",
+]
 
-[tool.check-manifest]
-ignore = ["jupyterlab_pytutor/labextension/**", "yarn.lock", ".*", "package-lock.json"]
+[tool.tbump]
+field = [
+    { name = "channel", default = "" },
+    { name = "release", default = "" },
+]
+
+[tool.tbump.version]
+current = "0.1.0"
+regex = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)((?P<channel>a|b|rc|.dev)(?P<release>\\d+))?"
+
+[tool.tbump.git]
+message_template = "Bump to {new_version}"
+tag_template = "v{new_version}"
+
+[[tool.tbump.file]]
+src = "pyproject.toml"
+version_template = "version = \"{major}.{minor}.{patch}{channel}{release}\""
+
+[[tool.tbump.file]]
+src = "package.json"
+version_template = "\"version\": \"{major}.{minor}.{patch}{channel}{release}\""
