--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,98 +1,71 @@
 [build-system]
-requires = [
-    "hatchling",
-    "jupyterlab~=3.1",
-]
+requires = ["hatchling>=1.4.0", "jupyterlab>=3.4.7,<4.0.0", "hatch-nodejs-version"]
 build-backend = "hatchling.build"
 
 [project]
 name = "jupyterlab-pytutor"
-description = "A JupyterLab extension for pythontutor.com"
 readme = "README.md"
-requires-python = ">=3.6"
-authors = [
-    { name = "Thorsten Beier", email = "derthorstenbeier@gmail.com" },
-]
-keywords = [
-    "Jupyter",
-    "JupyterLab",
-    "JupyterLab3",
-]
+license = { file = "LICENSE" }
+requires-python = ">=3.7"
 classifiers = [
     "Framework :: Jupyter",
+    "Framework :: Jupyter :: JupyterLab",
+    "Framework :: Jupyter :: JupyterLab :: 3",
+    "Framework :: Jupyter :: JupyterLab :: Extensions",
+    "Framework :: Jupyter :: JupyterLab :: Extensions :: Prebuilt",
     "License :: OSI Approved :: BSD License",
     "Programming Language :: Python",
     "Programming Language :: Python :: 3",
-    "Programming Language :: Python :: 3.6",
     "Programming Language :: Python :: 3.7",
     "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
+    "Programming Language :: Python :: 3.10",
+    "Programming Language :: Python :: 3.11",
 ]
-dependencies = []
-version = "0.1.0"
+dynamic = ["version", "description", "authors", "urls", "keywords"]
 
-[project.license]
-file = "LICENSE"
+[tool.hatch.version]
+source = "nodejs"
 
-[project.urls]
-Homepage = "https://github.com/jupyterlab-contrib/jupyterlab-pytutor"
-
-[tool.hatch.build.targets.wheel.shared-data]
-"jupyterlab_pytutor/labextension/static" = "share/jupyter/labextensions/jupyterlab_pytutor/static"
-"install.json" = "share/jupyter/labextensions/jupyterlab_pytutor/install.json"
-"jupyterlab_pytutor/labextension/package.json" = "share/jupyter/labextensions/jupyterlab_pytutor/package.json"
-"jupyterlab_pytutor/labextension/schemas/jupyterlab_pytutor" = "share/jupyter/labextensions/jupyterlab_pytutor/schemas/jupyterlab_pytutor"
+[tool.hatch.metadata.hooks.nodejs]
+fields = ["description", "authors", "urls"]
 
 [tool.hatch.build.targets.sdist]
-exclude = [
-    ".github",
-]
+artifacts = ["jupyterlab_pytutor/labextension"]
+exclude = [".github", "binder"]
+
+[tool.hatch.build.targets.wheel.shared-data]
+"jupyterlab_pytutor/labextension" = "share/jupyter/labextensions/jupyterlab-pytutor"
+"install.json" = "share/jupyter/labextensions/jupyterlab-pytutor/install.json"
+
+[tool.hatch.build.hooks.version]
+path = "jupyterlab_pytutor/_version.py"
 
 [tool.hatch.build.hooks.jupyter-builder]
-dependencies = [
-    "hatch-jupyter-builder>=0.8.2",
-]
+dependencies = ["hatch-jupyter-builder>=0.5"]
 build-function = "hatch_jupyter_builder.npm_builder"
 ensured-targets = [
     "jupyterlab_pytutor/labextension/static/style.js",
     "jupyterlab_pytutor/labextension/package.json",
 ]
-skip-if-exists = [
-    "jupyterlab_pytutor/labextension/static/style.js",
-]
-
-[tool.hatch.build.hooks.jupyter-builder.editable-build-kwargs]
-build_dir = "jupyterlab_pytutor/labextension"
-source_dir = "src"
-build_cmd = "install:extension"
-npm = [
-    "jlpm",
-]
+skip-if-exists = ["jupyterlab_pytutor/labextension/static/style.js"]
 
 [tool.hatch.build.hooks.jupyter-builder.build-kwargs]
 build_cmd = "build:prod"
-npm = [
-    "jlpm",
-]
+npm = ["jlpm"]
 
-[tool.tbump]
-field = [
-    { name = "channel", default = "" },
-    { name = "release", default = "" },
-]
+[tool.hatch.build.hooks.jupyter-builder.editable-build-kwargs]
+build_cmd = "install:extension"
+npm = ["jlpm"]
+source_dir = "src"
+build_dir = "jupyterlab_pytutor/labextension"
 
-[tool.tbump.version]
-current = "0.1.0"
-regex = "(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)((?P<channel>a|b|rc|.dev)(?P<release>\\d+))?"
+[tool.jupyter-releaser.options]
+version_cmd = "hatch version"
 
-[tool.tbump.git]
-message_template = "Bump to {new_version}"
-tag_template = "v{new_version}"
+[tool.jupyter-releaser.hooks]
+before-build-npm = ["python -m pip install jupyterlab~=3.4", "jlpm", "jlpm build:prod"]
+before-build-python = ["jlpm clean:all"]
 
-[[tool.tbump.file]]
-src = "pyproject.toml"
-version_template = "version = \"{major}.{minor}.{patch}{channel}{release}\""
-
-[[tool.tbump.file]]
-src = "package.json"
-version_template = "\"version\": \"{major}.{minor}.{patch}{channel}{release}\""
+[tool.check-wheel-contents]
+ignore = ["W002"]
