Update Binder environment

--- a/.binder/environment.yml
+++ b/.binder/environment.yml
@@ -2,4 +2,7 @@ name: example-environment
 channels:
   - conda-forge
 dependencies:
-  - nodejs=14
+  - python=3.10
+  - jupyterlab >=3,<4.0.0a0
+  - nodejs >=18,<19
+  - pip
